--- a/views/Profesor/ver.ejs
+++ b/views/Profesor/ver.ejs
@@ -1,6 +1,6 @@
 <%- include("../header"); %>
 <div class="col-12">
-    <h1>Productos</h1>
+    <h1>Profesores</h1>
     <a href="/Profesor/agregar" class="btn btn-primary mb-2">Agregar</a>
     <table class="table table-bordered">
         <thead>
