--- a/views/Profesor/agregar.ejs
+++ b/views/Profesor/agregar.ejs
@@ -3,6 +3,11 @@
     <h1>Agregar producto</h1>
     <form method="post" action="/Profesor/insertar">
         <div class="form-group">
+            <label for="doc_id">doc_id</label>
+            <input required id="doc_id" placeholder="Id del profesor" class="form-control" type="text"
+                name="doc_id">
+        </div>
+        <div class="form-group">
             <label for="nombre">nombre</label>
             <input required id="nombre" placeholder="Nombre del Profesor" class="form-control" type="text"
                 name="nombre">
