--- a/views/Profesor/agregar.ejs
+++ b/views/Profesor/agregar.ejs
@@ -1,6 +1,6 @@
 <%- include("../header"); %>
 <div class="col-12">
-    <h1>Agregar producto</h1>
+    <h1>Agregar Profesor</h1>
     <form method="post" action="/Profesor/insertar">
         <div class="form-group">
             <label for="doc_id">doc_id</label>
