--- a/views/Profesor/editar.ejs
+++ b/views/Profesor/editar.ejs
@@ -1,6 +1,6 @@
 <%- include("../header"); %>
 <div class="col-12">
-    <h1>Editar producto</h1>
+    <h1>Editar Profesor/h1>
     <form method="post" action="/Profesor/actualizar">
 
         <input value="<%= Profesor.doc_id %>" name="doc_id" type="hidden">
