--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,23 @@
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         padding: 12px 16px;
+        z-index: 1;
       }
 
       .dropdown:hover .dropdown-content {
         display: block;
+      }
+
+      .dropdown span {
+        display: inline-block;
+        padding: 8px 12px;
+        background-color: #333;
+        color: #fff;
+        cursor: pointer;
+      }
+
+      .dropdown span:hover {
+        background-color: #555;
       }
     </style>
   </head>
