--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,30 +43,8 @@
     <div class="dropdown">
       <span>Selecciona una opción</span>
       <div class="dropdown-content">
-        <a href="/Profesor">/Profesor</a>
-        <a href="/Usuario">/Usuario</a>
-        <a href="/Curso">/Curso</a>
-        <a href="/Estudiante">/Estudiante</a>
-        <a href="/Material">/Material</a>
-        <a href="/Tarea">/Tarea</a>
-        <a href="/Foro">/Foro</a>
-        <a href="/Mensaje">/Mensaje</a>
-        <a href="/Administrador">/Administrador</a>
-        <a href="/Consulta">/Consulta</a>
-        <a href="/Paga">/Paga</a>
-        <a href="/Visualizar">/Visualizar</a>
-        <a href="/Ver">/Ver</a>
-        <a href="/Entregar">/Entregar</a>
-        <a href="/Participa">/Participa</a>
-        <a href="/Dicta">/Dicta</a>
-        <a href="/Asigna">/Asigna</a>
-        <a href="/Gestiona">/Gestiona</a>
-        <a href="/Encarga">/Encarga</a>
-        <a href="/Administra">/Administra</a>
-        <a href="/Remite">/Remite</a>
-        <a href="/Recibe">/Recibe</a>
-        <a href="/Envia">/Envia</a>
-        <a href="/Tiene">/Tiene</a>
+        <a href="/Profesor">Profesor</a>
+        <a href="/Estudiante">Estudiante</a>
       </div>
     </div>
   </body>
