--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Estás mirando la página de inicio, navega a:</p>
+    <p>Estás mirando la página de inicio, navega a las siguentes tablas para hacer CRUD:</p>
     <div class="dropdown">
       <span>Selecciona una opción</span>
       <div class="dropdown-content">
