--- a/views/Estudiante/editar.ejs
+++ b/views/Estudiante/editar.ejs
@@ -25,6 +25,11 @@
                 class="form-control" type="text" name="nombre">
         </div>
         <div class="form-group">
+            <label for="doc_identidad">doc_identidad</label>
+            <input value="<%= Estudiante.doc_identidad %>" required id="doc_identidad" placeholder="Docmento de identidad del Estudiante"
+                class="form-control" type="text" name="doc_identidad">
+        </div>
+        <div class="form-group">
             <label for="contraseña">contraseña</label>
             <input value="<%= Estudiante.contraseña %>" required id="contraseña" placeholder="Contraseña del Estudiante"
                 class="form-control" type="text" name="contraseña">
