--- a/views/Estudiante/ver.ejs
+++ b/views/Estudiante/ver.ejs
@@ -9,6 +9,7 @@
                 <th>email</th>
                 <th>genero</th>
                 <th>nombre</th>
+                <th>doc_identidad</th>
                 <th>contraseña</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -21,6 +22,7 @@
                 <td><%= Estudiante.email %></td>
                 <td><%= Estudiante.genero %></td>
                 <td><%= Estudiante.nombre %></td>
+                <td><%= Estudiante.doc_identidad %></td>
                 <td><%= Estudiante.contraseña %></td>
                 <td>
                     <a href="/Estudiante/editar/<%= Estudiante.id_nodo %>" class="btn btn-warning">
