--- a/views/Estudiante/agregar.ejs
+++ b/views/Estudiante/agregar.ejs
@@ -28,6 +28,11 @@
                 name="nombre">
         </div>
         <div class="form-group">
+            <label for="doc_identidad">doc_identidad</label>
+            <input required id="doc_identidad" placeholder="Documento de identidad del Estudiante" class="form-control" type="text"
+                name="doc_identidad">
+        </div>
+        <div class="form-group">
             <label for="contraseña">contraseña</label>
             <input required id="contraseña" placeholder="Contraseña del Estudiante" class="form-control" type="text"
                 name="contraseña">
