--- a/views/Estudiante/editar.ejs
+++ b/views/Estudiante/editar.ejs
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label for="genero">genero</label>
             <input value="<%= Estudiante.genero %>" required id="genero" placeholder="Genero del Estudiante"
-                class="form-control" type="number" name="genero">
+                class="form-control" type="text" name="genero">
         </div>
         <div class="form-group">
             <label for="nombre">nombre</label>
@@ -27,7 +27,7 @@
         <div class="form-group">
             <label for="doc_identidad">doc_identidad</label>
             <input value="<%= Estudiante.doc_identidad %>" required id="doc_identidad" placeholder="Docmento de identidad del Estudiante"
-                class="form-control" type="text" name="doc_identidad">
+                class="form-control" type="number" name="doc_identidad">
         </div>
         <div class="form-group">
             <label for="contraseña">contraseña</label>
