--- a/views/Profesor/ver.ejs
+++ b/views/Profesor/ver.ejs
@@ -38,5 +38,6 @@
             <% })%>
         </tbody>
     </table>
+    <a href="/" class="btn btn-secondary mb-2">Regresar</a>
 </div>
 <%- include("../footer"); %>
