--- a/views/Estudiante/editar.ejs
+++ b/views/Estudiante/editar.ejs
@@ -1,36 +1,36 @@
 <%- include("../header"); %>
 <div class="col-12">
-    <h1>Editar Estudiante
+    <h1>Editar Estudiante</h1>
     <form method="post" action="/Estudiante/actualizar">
 
         <input value="<%= Estudiante.id_nodo %>" name="id_nodo" type="hidden">
         <div class="form-group">
-            <label for="ref_bancaria">ref_bancaria</label>
+            <label for="ref_bancaria" class="small">ref_bancaria</label>
             <input value="<%= Estudiante.ref_bancaria %>" required id="ref_bancaria" placeholder="Referefcia bancaria del Estudiante"
                 class="form-control" type="text" name="ref_bancaria">
         </div>
         <div class="form-group">
-            <label for="email">email</label>
+            <label for="email" class="small">email</label>
             <input value="<%= Estudiante.email %>" required id="email" placeholder="Email del Estudiante"
                 class="form-control" type="text" name="email">
         </div>
         <div class="form-group">
-            <label for="genero">genero</label>
+            <label for="genero" class="small">genero</label>
             <input value="<%= Estudiante.genero %>" required id="genero" placeholder="Genero del Estudiante"
                 class="form-control" type="text" name="genero">
         </div>
         <div class="form-group">
-            <label for="nombre">nombre</label>
+            <label for="nombre" class="small">nombre</label>
             <input value="<%= Estudiante.nombre %>" required id="nombre" placeholder="Nombre del Estudiante"
                 class="form-control" type="text" name="nombre">
         </div>
         <div class="form-group">
-            <label for="doc_identidad">doc_identidad</label>
+            <label for="doc_identidad" class="small">doc_identidad</label>
             <input value="<%= Estudiante.doc_identidad %>" required id="doc_identidad" placeholder="Docmento de identidad del Estudiante"
                 class="form-control" type="number" name="doc_identidad">
         </div>
         <div class="form-group">
-            <label for="contraseña">contraseña</label>
+            <label for="contraseña" class="small">contraseña</label>
             <input value="<%= Estudiante.contraseña %>" required id="contraseña" placeholder="Contraseña del Estudiante"
                 class="form-control" type="text" name="contraseña">
         </div>
