--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Estás mirando la página de inicio, navega a las siguentes tablas para hacer CRUD:</p>
+    <p>Estás mirando la página de inicio, navega a:</p>
     <div class="dropdown">
       <span>Selecciona una opción</span>
       <div class="dropdown-content">
@@ -47,5 +47,7 @@
         <a href="/Estudiante">Estudiante</a>
       </div>
     </div>
+    <p>Navega aquí para ver los cursos:</p>
+    <a href="/Cursos" class="btn btn-primary">Ver Cursos</a>
   </body>
 </html>
