--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,10 @@
         <a href="/Estudiante">Estudiante</a>
       </div>
     </div>
-    <p>Navega aquí para ver los cursos:</p>
+    <br> <!-- Agregamos un salto de línea para separar los elementos -->
+    <br>
+
+    <p>O navega aquí para ver los cursos:</p>
     <a href="/Cursos" class="btn btn-primary">Ver Cursos</a>
   </body>
 </html>
