--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -10,32 +10,36 @@
         <% profesores.forEach(function(profesor) { %>
             <li>Nombre: <%= profesor.nombre %>, Email: <%= profesor.email %></li>
         <% }); %>
-
     </ul>
+
     <h2>Alumnos</h2>
     <ul>
         <% alumnos.forEach(function(alumno) { %>
             <li>Nombre: <%= alumno.nombre %>, Email: <%= alumno.email %></li>
         <% }); %>
-
     </ul>
+
     <h2>Materiales</h2>
     <ul>
         <% materiales.forEach(function(material) { %>
             <li>Título: <%= material.titulo %>, Descripción: <%= material.descripcion %>, Archivo: <%= material.archivo %></li>
         <% }); %>
     </ul>
+
     <h2>Tareas</h2>
     <ul>
         <% tareas.forEach(function(tarea) { %>
             <li>Nombre: <%= tarea.nombre %>, Descripción: <%= tarea.descripcion %>, Fecha de entrega: <%= tarea.fecha_e %>, Archivo: <%= tarea.archivo %></li>
         <% }); %>
     </ul>
+
     <h2>Foros</h2>
     <ul>
         <% foros.forEach(function(foro) { %>
             <li>Nombre: <%= foro.nombre %>, Descripción: <%= foro.descripcion %></li>
         <% }); %>
     </ul>
+
+    <a href="/Cursos">Volver a la lista de cursos</a>
 </body>
 </html>
