--- a/views/Cursos/ver.ejs
+++ b/views/Cursos/ver.ejs
@@ -8,8 +8,8 @@
     <ul>
         <% Curso.forEach(function(curso) { %>
             <li>
-                <a href="/Cursos/<%= Curso.id_curso %>">
-                    <%= Curso.Nombre %> - <%= Curso.categoria %>
+                <a href="/Cursos/:<%= Curso.id_curso %>">
+                    <%= curso.Nombre %> - <%= curso.categoria %>
                 </a>
             </li>
         <% }); %>
