--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -5,39 +5,49 @@
 </head>
 <body>
     <h1>Detalles del Curso</h1>
-    <h2>Profesores</h2>
+    <h2>Profesor</h2>
     <ul>
-        <% profesores.forEach(function(profesor) { %>
-            <li>Nombre: <%= profesor.nombre %>, Email: <%= profesor.email %></li>
-        <% }); %>
+        <% if (data.profesores) {
+            data.profesores.forEach(function(profesor) { %>
+                <li>Nombre: <%= profesor.nombre %>, Email: <%= profesor.email %></li>
+            <% });
+        } %>
     </ul>
 
     <h2>Alumnos</h2>
     <ul>
-        <% alumnos.forEach(function(alumno) { %>
-            <li>Nombre: <%= alumno.nombre %>, Email: <%= alumno.email %></li>
-        <% }); %>
+        <% if (data.alumnos) {
+            data.alumnos.forEach(function(alumno) { %>
+                <li>Nombre: <%= alumno.nombre %>, Email: <%= alumno.email %></li>
+            <% });
+        } %>
     </ul>
 
     <h2>Materiales</h2>
     <ul>
-        <% materiales.forEach(function(material) { %>
-            <li>Título: <%= material.titulo %>, Descripción: <%= material.descripcion %>, Archivo: <%= material.archivo %></li>
-        <% }); %>
+        <% if (data.materiales) {
+            data.materiales.forEach(function(material) { %>
+                <li>Título: <%= material.titulo %>, Descripción: <%= material.descripcion %>, Archivo: <%= material.archivo %></li>
+            <% });
+        } %>
     </ul>
 
     <h2>Tareas</h2>
     <ul>
-        <% tareas.forEach(function(tarea) { %>
-            <li>Nombre: <%= tarea.nombre %>, Descripción: <%= tarea.descripcion %>, Fecha de entrega: <%= tarea.fecha_e %>, Archivo: <%= tarea.archivo %></li>
-        <% }); %>
+        <% if (data.tareas) {
+            data.tareas.forEach(function(tarea) { %>
+                <li>Nombre: <%= tarea.nombre %>, Descripción: <%= tarea.descripcion %>, Fecha de entrega: <%= tarea.fecha_e %>, Archivo: <%= tarea.archivo %></li>
+            <% });
+        } %>
     </ul>
 
     <h2>Foros</h2>
     <ul>
-        <% foros.forEach(function(foro) { %>
-            <li>Nombre: <%= foro.nombre %>, Descripción: <%= foro.descripcion %></li>
-        <% }); %>
+        <% if (data.foros) {
+            data.foros.forEach(function(foro) { %>
+                <li>Nombre: <%= foro.nombre %>, Descripción: <%= foro.descripcion %></li>
+            <% });
+        } %>
     </ul>
 
     <a href="/Cursos">Volver a la lista de cursos</a>
