--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -5,10 +5,11 @@
 </head>
 <body>
     <h1>Detalles del Curso</h1>
-    <h2>Profesor</h2>
+
+    <h2>Profesores</h2>
     <ul>
-        <% if (data.profesores) {
-            data.profesores.forEach(function(profesor) { %>
+        <% if (Curso.profesores) {
+            Curso.profesores.forEach(function(profesor) { %>
                 <li>Nombre: <%= profesor.nombre %>, Email: <%= profesor.email %></li>
             <% });
         } %>
@@ -16,8 +17,8 @@
 
     <h2>Alumnos</h2>
     <ul>
-        <% if (data.alumnos) {
-            data.alumnos.forEach(function(alumno) { %>
+        <% if (Curso.alumnos) {
+            Curso.alumnos.forEach(function(alumno) { %>
                 <li>Nombre: <%= alumno.nombre %>, Email: <%= alumno.email %></li>
             <% });
         } %>
@@ -25,8 +26,8 @@
 
     <h2>Materiales</h2>
     <ul>
-        <% if (data.materiales) {
-            data.materiales.forEach(function(material) { %>
+        <% if (Curso.materiales) {
+            Curso.materiales.forEach(function(material) { %>
                 <li>Título: <%= material.titulo %>, Descripción: <%= material.descripcion %>, Archivo: <%= material.archivo %></li>
             <% });
         } %>
@@ -34,8 +35,8 @@
 
     <h2>Tareas</h2>
     <ul>
-        <% if (data.tareas) {
-            data.tareas.forEach(function(tarea) { %>
+        <% if (Curso.tareas) {
+            Curso.tareas.forEach(function(tarea) { %>
                 <li>Nombre: <%= tarea.nombre %>, Descripción: <%= tarea.descripcion %>, Fecha de entrega: <%= tarea.fecha_e %>, Archivo: <%= tarea.archivo %></li>
             <% });
         } %>
@@ -43,8 +44,8 @@
 
     <h2>Foros</h2>
     <ul>
-        <% if (data.foros) {
-            data.foros.forEach(function(foro) { %>
+        <% if (Curso.foros) {
+            Curso.foros.forEach(function(foro) { %>
                 <li>Nombre: <%= foro.nombre %>, Descripción: <%= foro.descripcion %></li>
             <% });
         } %>
