--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -7,7 +7,7 @@
     <h1>Curso: <%= Nombre %></h1>
 
 
-    <h2>Profesor/h2></h2>
+    <h2>Profesor</h2>
     <ul>
         <% if (Curso.profesores) {
             Curso.profesores.forEach(function(profesor) { %>
