--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -4,7 +4,7 @@
     <title>Detalles del Curso</title>
 </head>
 <body>
-    <h1>Curso: <%= Nombre %></h1>
+    <h1>Curso: <%= Curso.Nombre %></h1>
 
 
     <h2>Profesor</h2>
