--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -6,12 +6,11 @@
 <body>
     <h1>Curso: <%= Curso.nombre %></h1>
 
-
     <h2>Profesor</h2>
     <ul>
         <% if (Curso.profesores) {
             Curso.profesores.forEach(function(profesor) { %>
-                <li>Nombre: <%= profesor.nombre %>,   Email: <%= profesor.email %></li>
+                <li>Nombre: <%= profesor.nombre %><br>Email: <%= profesor.email %></li>
             <% });
         } %>
     </ul>
@@ -20,7 +19,7 @@
     <ul>
         <% if (Curso.alumnos) {
             Curso.alumnos.forEach(function(alumno) { %>
-                <li>Nombre: <%= alumno.nombre %>,   Email: <%= alumno.email %></li>
+                <li>Nombre: <%= alumno.nombre %><br>Email: <%= alumno.email %></li>
             <% });
         } %>
     </ul>
@@ -29,7 +28,7 @@
     <ul>
         <% if (Curso.materiales) {
             Curso.materiales.forEach(function(material) { %>
-                <li>Título: <%= material.titulo %>,   Descripción: <%= material.descripcion %>,   Archivo: <%= material.archivo %></li>
+                <li>Título: <%= material.titulo %><br>Descripción: <%= material.descripcion %><br>Archivo: <%= material.archivo %></li>
             <% });
         } %>
     </ul>
@@ -38,7 +37,7 @@
     <ul>
         <% if (Curso.tareas) {
             Curso.tareas.forEach(function(tarea) { %>
-                <li>Nombre: <%= tarea.nombre %>,   Descripción: <%= tarea.descripcion %>,   Fecha de entrega: <%= tarea.fecha_e %>,   Archivo: <%= tarea.archivo %></li>
+                <li>Nombre: <%= tarea.nombre %><br>Descripción: <%= tarea.descripcion %><br>Fecha de entrega: <%= tarea.fecha_e %><br>Archivo: <%= tarea.archivo %></li>
             <% });
         } %>
     </ul>
@@ -47,7 +46,7 @@
     <ul>
         <% if (Curso.foros) {
             Curso.foros.forEach(function(foro) { %>
-                <li>Nombre: <%= foro.nombre %>,   Descripción: <%= foro.descripcion %></li>
+                <li>Nombre: <%= foro.nombre %><br>Descripción: <%= foro.descripcion %></li>
             <% });
         } %>
     </ul>
