--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -2,6 +2,16 @@
 <html>
 <head>
     <title>Detalles del Curso</title>
+    <style>
+        ul {
+            list-style-type: disc; /* Establece la viñeta como un disco */
+        }
+
+        li {
+            margin-bottom: 10px; /* Añade un margen inferior a cada elemento de la lista */
+            padding-left: 20px; /* Agrega un espacio a la izquierda para la viñeta */
+        }
+    </style>
 </head>
 <body>
     <h1>Curso: <%= Curso.nombre %></h1>
