--- a/views/Cursos/curso.ejs
+++ b/views/Cursos/curso.ejs
@@ -20,7 +20,8 @@
     <ul>
         <% if (Curso.profesores) {
             Curso.profesores.forEach(function(profesor) { %>
-                <li>Nombre: <%= profesor.nombre %><br>Email: <%= profesor.email %></li>
+                <li>Nombre: <%= profesor.nombre %></li>
+                <li>Email: <%= profesor.email %></li>
             <% });
         } %>
     </ul>
