--- a/views/Estudiante/agregar.ejs
+++ b/views/Estudiante/agregar.ejs
@@ -4,12 +4,12 @@
     <form method="post" action="/Estudiante/insertar">
         <div class="form-group">
             <label for="id_nodo">id_nodo</label>
-            <input required id="id_nodo" placeholder="Id del Estudiante" class="form-control" type="text"
+            <input required id="id_nodo" placeholder="Id del Estudiante" class="form-control" type="number"
                 name="id_nodo">
         </div>
         <div class="form-group">
             <label for="ref_bancaria">ref_bancaria</label>
-            <input required id="ref_bancaria" placeholder="Referencia bancaria del Estudiante" class="form-control" type="text"
+            <input required id="ref_bancaria" placeholder="Referencia bancaria del Estudiante" class="form-control" type="number"
                 name="ref_bancaria">
         </div>
         <div class="form-group">
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group">
             <label for="doc_identidad">doc_identidad</label>
-            <input required id="doc_identidad" placeholder="Documento de identidad del Estudiante" class="form-control" type="text"
+            <input required id="doc_identidad" placeholder="Documento de identidad del Estudiante" class="form-control" type="number"
                 name="doc_identidad">
         </div>
         <div class="form-group">
