--- a/views/Profesor/agregar.ejs
+++ b/views/Profesor/agregar.ejs
@@ -4,7 +4,7 @@
     <form method="post" action="/Profesor/insertar">
         <div class="form-group">
             <label for="doc_id">doc_id</label>
-            <input required id="doc_id" placeholder="Id del profesor" class="form-control" type="text"
+            <input required id="doc_id" placeholder="Id del profesor" class="form-control" type="number"
                 name="doc_id">
         </div>
         <div class="form-group">
