--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
       <span>Selecciona una opción</span>
       <div class="dropdown-content">
         <a href="/Profesor">Profesor</a>
-        <a href="/Estudiante">Estudiante</a>
+        <a href="/Usuario">Usuario</a>
       </div>
     </div>
     <br> <!-- Agregamos un salto de línea para separar los elementos -->
