--- a/views/Usuario/ver.ejs
+++ b/views/Usuario/ver.ejs
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <% UsuarioforEach(Usuario=> { %>
+            <% Usuario.forEach(Usuario=> { %>
             <tr>
                 <td><%= Usuario.ref_bancaria %></td>
                 <td><%= Usuario.email %></td>
