--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@
       <p>Estás mirando la página de inicio, navega a:</p>
       <div class="dropdown">
         <span>Selecciona una opción</span>
-        <div class="dropdown-content">
+        <div class="dropdown-content" style="display: flex; flex-direction: row;">
           <a href="/Profesor" class="btn">Profesor</a>
           <a href="/Estudiante" class="btn">Estudiante</a>
         </div>
