--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,8 +114,22 @@
           <span>Selecciona una opción</span>
         </a>
         <div class="dropdown-content" style="display: flex; flex-direction: row;">
-          <a href="/Profesor" class="btn">Profesor</a>
-          <a href="/Usuario" class="btn">Usuario</a>
+          <div class="dropdown">
+            <a href="#" class="dropdown-link">
+              <span>Profesor</span>
+            </a>
+            <div class="dropdown-content">
+              <a href="/Profesor" class="btn">Profesor</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <a href="#" class="dropdown-link">
+              <span>Usuario</span>
+            </a>
+            <div class="dropdown-content">
+              <a href="/Usuario" class="btn">Usuario</a>
+            </div>
+          </div>
         </div>
       </div>
       <br>
