--- a/views/Profesor/ver.ejs
+++ b/views/Profesor/ver.ejs
@@ -26,12 +26,12 @@
                 <td><%= profesor.contraseña %></td>
                 
                 <td>
-                    <a href="/Profesor/editar/<%= profesor.doc_identidad %>" class="btn btn-warning">
+                    <a href="/Profesor/editar/<%= profesor.doc_id %>" class="btn btn-warning">
                         Editar
                     </a>
                 </td>
                 <td>
-                    <a href="/Profesor/eliminar/<%= profesor.doc_identidad %>" class="btn btn-danger">
+                    <a href="/Profesor/eliminar/<%= profesor.doc_id %>" class="btn btn-danger">
                         Eliminar
                     </a>
                 </td>
